--- a/Products.html
+++ b/Products.html
@@ -160,7 +160,8 @@
                         <img src=" images/pp-chemical-bag-500x500.webp " class="card-img-top  " data-category="category1 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">PP Chemical Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">
+                                Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -169,7 +170,8 @@
                         <img src="images/pp-fertilizer-bag-500x500.webp " class="card-img-top " data-category="category1 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">PP Fertilizer Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">
+                                Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -179,7 +181,7 @@
                         <img src="images/PP bag.webp " class=" card-img-top " data-category="category1 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">PP Woven Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -195,7 +197,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Bag</h5>
                             <h6>Size : 15 inch x 16 inch</h6>
                             <h6>Weight:32g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -207,7 +209,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Bag</h5>
                             <h6>Size : 12 inch x 16 inch</h6>
                             <h6>Weight:0.11g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -219,7 +221,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Natural White </h5>
                             <h6>Size: 20 inch x 33 inch</h6>
                             <h6>Weight : 0.68g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -234,7 +236,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Bag</h5>
                             <h6>Size : 24 Inch x 40 Inch</h6>
                             <h6>Weight: 93g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -245,7 +247,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Bag</h5>
                             <h6>Size : 15 Inch x 16 Inch</h6>
                             <h6>Weight : 32g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -256,7 +258,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Bag</h5>
                             <h6>Size : 24 Inch x 36 Inch</h6>
                             <h6>Weight : 0.88g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -270,7 +272,7 @@
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category2 ">HDPE Rice Bag</h5>
                             <h6>Size : 2 x 4 Feet</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -280,7 +282,7 @@
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category2 ">HDPE Woven Carry Bag</h5>
                             <h6>Size : 8 Inch x 12 Inch</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -290,7 +292,7 @@
                         <img src="images/hdpe-woven-flour-bag-500x500.jpg " class="card-img-top " data-category="category2 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category2 ">HDPE Woven Flour Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -305,8 +307,8 @@
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">Leno Fabric Mesh Bag</h5>
                             <h6>Size : 2 Feet x 4 Feet</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
-                                Cart</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
+                                Cart</a> -->
                         </div>
                     </div>
                 </div>
@@ -316,8 +318,8 @@
                         <img src="images/pp-woven-bags-500x500.webp " data-category="category1 " class="card-img-top ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">PP Woven Printed Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
-                                Cart</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
+                                Cart</a> -->
                         </div>
                     </div>
                 </div>
@@ -328,8 +330,8 @@
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">PP Woven Rice Bag</h5>
                             <h6>Size: 6 inch x 10 inch</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
-                                Cart</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
+                                Cart</a> -->
                         </div>
                     </div>
                 </div>
@@ -342,8 +344,8 @@
                         <img src="images/pp-woven-bag-500x500.webp " class=" card-img-top " data-category="category1 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category1 ">PP 15Kg Woven Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
-                                Cart</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category1 ">Add to
+                                Cart</a> -->
                         </div>
                     </div>
                 </div>
@@ -353,7 +355,7 @@
                         <img src="images/hdpe-laminated-chemical-bag-500x500.webp " class="card-img-top " data-category="category2 ">
                         <div class="card-body text-center " data-category="category2 ">
                             <h5 class="card-title " data-category="category2 ">HDPE Laminated Chemical Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -363,7 +365,7 @@
                         <img src="images/hdpe-printed-bag-500x500.webp " class="card-img-top " data-category="category2 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category2 ">HDPE Printed Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category2 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -376,7 +378,7 @@
                         <img src="images/pp-woven-rice-sack.webp " class="card-img-top " data-category="category3 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category3 ">PP Woven Rice Sack</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category3 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category3 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -387,7 +389,7 @@
                         <img src="images/printed-woven-sack.webp " class=" card-img-top " data-category="category3 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category3 ">Printed Woven Sack</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category3 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category3 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -399,7 +401,7 @@
                             <h5 class="card-title " data-category="category3 ">Laminated Woven Sack</h5>
                             <h6>Size: 16 inch x 22 inch</h6>
                             <h6>Weight:42g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category3 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category3 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -411,7 +413,7 @@
                         <img src="images/plain-hdpe-roll.webp " class=" card-img-top " data-category="category5 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category5 ">Plain HDPE Roll</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category5 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category5 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -421,7 +423,7 @@
                         <img src="images/pp-laminated-woven-bag.webp " class=" card-img-top " data-category="category6 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category6 ">PP Laminated Woven Bag</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category6 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category6 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -433,7 +435,7 @@
                             <h5 class="card-title " data-category="category7 ">Woven Bag</h5>
                             <h6>Size: 16 inch x 22 inch</h6>
                             <h6>Weight:42g</h6>
-                            <a href="# " class="btn custom-button-style " data-category="category7 ">Add toCart</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category7 ">Add toCart</a> -->
                         </div>
                     </div>
                 </div>
@@ -445,7 +447,7 @@
                         <img src="images/pp-woven-roll.webp " class=" card-img-top ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category4 ">PP Woven Roll</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category4 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category4 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -455,7 +457,7 @@
                         <img src="images/plain-pp-woven-roll.webp " class=" card-img-top " data-category="category4 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category4 ">Plain PP Woven Roll</h5>
-                            <a href="# " class="btn custom-button-style " data-category="category4 ">Know More</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category4 ">Know More</a> -->
                         </div>
                     </div>
                 </div>
@@ -465,8 +467,8 @@
                         <img src="images/white-pp-woven-roll-500x500.webp " class="card-img-top " data-category="category4 ">
                         <div class="card-body text-center ">
                             <h5 class="card-title " data-category="category4 ">White PP Woven Roll </h5>
-                            <a href="# " class="btn custom-button-style " data-category="category4 ">Add to
-                                Cart</a>
+<!--                             <a href="# " class="btn custom-button-style " data-category="category4 ">Add to
+                                Cart</a> -->
                         </div>
                     </div>
                 </div>
